impletmented care button functionality so that you can now feed the pet and this both updates to the pet instance, and displays to the user in the form of a simple bar graphic.... TO DO: figure out how to put the class in a seperate file to the main one, fix display of image when it is put into the main game (right now it's really big and needs sizing now to always fit the box it's contained in), think about if there's anywhere else that we can maybe create more functions or classes that can handle event listening, creation and anything else for other animals, where we can possibly reduce replication of the code. add different additions for different animals. add style to the website, improve layouting and general appearance. implement different images for different states (i can possibly help with the graphics for this- i have some ideas!). add a timer to the page or some other way to make the status bars decrease.  add a text area to the game page for a state message to be displayed after a user takes an action, so that the pet can express his pleasure/displeasure for the action taken - will need to write an if/switch or some other mechanism in order for this functionality to be implemented. stretch goal:  allow the user to select different items for different animals, with varying levels of benefit.

--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ button {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    text-align: center;
+    align-items: center;
     padding: 10px;
-    border: solid black 3px;
+    border: solid rgb(246, 255, 0) 3px;
     border-radius: 40px;
 }
 
@@ -71,19 +71,18 @@ button {
     font-style: normal;
 }
 #statusFlexWrapper p {
-    width: 30%;
+    width: 40%;
     box-sizing: border-box;
-    text-align: right;
+    text-align: end;
 }
 
 .statusContainer {
     background-color: rgb(162, 162, 162);
     height: 20px;
-    width: 60%;
+    width: 55%;
+    left: 5px;
     box-sizing: border-box;
     position: relative;
-    top: 16px;
-    left: 10px;
     border: black solid 1px;
 }
 
@@ -92,8 +91,9 @@ button {
 }
 
 /* nb. to change bar graphic, in the js simple, change style.width to 'x'% for each id detailed below, as required */
-#hungerBar, #playBar, #thirstBar {
-    width: 100%;
+#fedBar, #entertainedBar, #quenchedBar {
+    width: 50%;
+    max-width: 100%;
     height: 100%;
-    background-color: rgb(34, 239, 54);
+    background-color: rgb(34, 239, 72);
 }
